<resources>
    <string name="app_name">Home</string>
    <string name="title_activity_login">Nosso Chat</string>
    <string name="title_activity_sign_up">Cadastro</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Nome</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_new_password">Nova senha</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_link">Link convencional login</string>
    <string name="action_unlink">Unlink convencional login</string>
    <string name="action_sign_in_facebook">Sign in com Facebook</string>
    <string name="action_link_facebook">Link Facebook login</string>
    <string name="action_unlink_facebook">Unlink Facebook login</string>
    <string name="action_sign_in_google">Sign in com Google</string>
    <string name="action_link_google">Link Google login</string>
    <string name="action_unlink_google">Unlink Google login</string>
    <string name="action_sign_in_twitter">Sign in com Twitter</string>
    <string name="action_link_twitter">Link Twitter login</string>
    <string name="action_unlink_twitter">Unlink Twitter login</string>
    <string name="action_sign_in_github">Sign in com GitHub</string>
    <string name="action_link_github">Link GitHub login</string>
    <string name="action_unlink_github">Unlink GitHub login</string>
    <string name="action_sign_up">Cadastrar</string>
    <string name="action_sign_up_call">Cadastrar</string>
    <string name="action_reset_call">Recuperar acesso</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Cadastro</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="update_profile">Atualizar profile</string>
    <string name="reset">Recuperar acesso</string>
    <string name="update_login">Atualizar login</string>
    <string name="reset_bt_label">Iniciar recuperação acesso</string>
    <string name="update_password">Atualizar senha</string>
    <string name="link_accounts">Link contas</string>
    <string name="remove_user">Remover conta</string>
    <string name="logout">Logout</string>
    <string name="title_activity_update">UpdateActivity</string>
    <string name="title_activity_update_login">UpdateLoginActivity</string>
    <string name="title_activity_update_password">UpdatePasswordActivity</string>
    <string name="title_activity_link_accounts">Link contas</string>
    <string name="title_activity_remove_user">RemoveUserActivity</string>
    <string name="title_activity_notification">Notifications Firebase</string>
    <string name="password_info">Para prosseguir com a atualização informe abaixo sua senha.</string>

    <string name="facebook_app_id">1832554003634047</string>

    <string name="github_app_id"></string>
    <string name="github_app_secret"></string>
    <string name="github_app_url"></string>
    <string name="chk_topics">Topics</string>
    <string name="chk_soccer">Futebol</string>
    <string name="chk_basketball">Basquete</string>
    <string name="chk_volley">Volei</string>
    <string name="chk_swimming">Natação</string>
    <string name="chk_news">Notícias gerais</string>
    <string name="chk_unique_token">Unique token id</string>
</resources>
